# addtofullpack_manager

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake.yml
addtofullpack_manager/addtofullpack_manager/include/addtofullpack_manager/: regamedll_api.h
addtofullpack_manager/addtofullpack_manager/src/: main.cpp  regamedll_api.cpp  rehlds_api.cpp
addtofullpack_manager/sdk/amxx/include/amxx/: amx.h  amxx_config.h  api.h  string.h
addtofullpack_manager/sdk/amxx/src/: amxx_api.cpp  amxx_string.cpp
addtofullpack_manager/sdk/cssdk/include/cssdk/common/: bsp.h  cl_entity.h  consts.h  cvar.h  entity_state.h  event_args.h  hook_chains.h  model.h  net_address.h  pm_trace.h  sequence.h  trace.h  user_cmd.h
addtofullpack_manager/sdk/cssdk/include/cssdk/dll/: cdll_dll.h  decals.h  entity_base.h  ext_defs.h  game_rules.h  items.h  monster_base.h  monster_event.h  player.h  regamedll_api.h  regamedll_consts.h  save_restore.h  weapons.h
addtofullpack_manager/sdk/cssdk/include/cssdk/dll/api/: cs_entity.h  cs_player.h  cs_player_item.h
addtofullpack_manager/sdk/cssdk/include/cssdk/engine/: consistency.h  custom.h  edict.h  eiface.h  entity_vars.h  global_vars.h  rehlds_api.h  userid_rehlds.h
addtofullpack_manager/sdk/cssdk/include/cssdk/pm_shared/: pm_defs.h  pm_shared.h
addtofullpack_manager/sdk/cssdk/include/cssdk/public/: interface.h  os_config.h  strind.h  utils.h  vector.h
addtofullpack_manager/sdk/cssdk/src/: interface.cpp
addtofullpack_manager/sdk/metamod/include/metamod/: api.h  engine.h  engine_hooks.h  gamedll.h  gamedll_hooks.h  metamod_config.h  os_dep.h  utils.h
addtofullpack_manager/sdk/metamod/src/: engine.cpp  engine_hooks.cpp  gamedll.cpp  gamedll_hooks.cpp  h_export.cpp  metamod_api.cpp  utils.cpp
cmake/: Definitions.cmake  GCC.cmake  Intel.cmake  Tools.cmake
include/: addtofullpack_manager.inc
workflows/: cmake.yml
